--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Twoja firma</title>
+    <title>Ren-art</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -12,6 +12,7 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
+  <style></style>
   <body class="is-preload">
     <!-- Header -->
     <header id="header" class="alt">
@@ -21,23 +22,13 @@
           <li><a href="index.html">Strona główna</a></li>
 
           <li><a href="generic.html">Czym się zajmujemy</a></li>
-
           <li class="current"><a href="contact.html">Kontakt</a></li>
           <li>
-            <a href="#" class="dropdown">Lista</a>
+            <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
-              <li><a href="#">Wybór 1</a></li>
-              <li><a href="#">Wybór 2</a></li>
-              <li><a href="#">Wybór 3</a></li>
-              <li>
-                <a href="#">Podmenu</a>
-                <ul>
-                  <li><a href="#">Opcja 1</a></li>
-                  <li><a href="#">Opcja 2</a></li>
-                  <li><a href="#">Opcja 3</a></li>
-                  <li><a href="#">Opcja 4</a></li>
-                </ul>
-              </li>
+              <li><a href="okazja.html">Okazjonalnie</a></li>
+              <li><a href="#">Romantycznie</a></li>
+              <li><a href="#">Boho</a></li>
             </ul>
           </li>
         </ul>
