--- a/index.html
+++ b/index.html
@@ -24,20 +24,11 @@
           <li><a href="generic.html">Czym się zajmujemy</a></li>
           <li><a href="contact.html">Kontakt</a></li>
           <li>
-            <a href="#" class="dropdown">Lista</a>
+            <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
-              <li><a href="#">Wybór 1</a></li>
-              <li><a href="#">Wybór 2</a></li>
-              <li><a href="#">Wybór 3</a></li>
-              <li>
-                <a href="#">Podmenu</a>
-                <ul>
-                  <li><a href="#">Opcja 1</a></li>
-                  <li><a href="#">Opcja 2</a></li>
-                  <li><a href="#">Opcja 3</a></li>
-                  <li><a href="#">Opcja 4</a></li>
-                </ul>
-              </li>
+              <li><a href="#">Okazjonalnie</a></li>
+              <li><a href="#">Romantycznie</a></li>
+              <li><a href="#">Boho</a></li>
             </ul>
           </li>
         </ul>
@@ -126,23 +117,31 @@
           </div>
           <div>
             <article>
-              <a class="image fit" href="#"
-                ><img src="images/picpro.png" alt=""
+              <a class="image fit" href="okazja.html"
+                ><img src="images/picpro1.png" alt=""
               /></a>
-              <h3>Przykładowy projekt</h3>
-              <p>Przykładowy opis projektu.</p>
+              <h3>Przykładowy projekt okazjonalny</h3>
+              <p>
+                Projekt obejmuje organizację i dekorację uroczystości chrztu
+                świętego. W skład realizacji wchodzi personalizowana papeteria,
+                dekoracje stołu oraz upominki dla gości. Całość utrzymana w
+                eleganckim i delikatnym stylu, dostosowanym do indywidualnych
+                preferencji rodziny.
+              </p>
               <ul class="actions">
-                <li><a href="#" class="button">Sprawdź</a></li>
+                <li>
+                  <a href="okazja.html" class="button">Sprawdź szczegóły</a>
+                </li>
               </ul>
             </article>
             <article>
               <a class="image fit" href="#"
                 ><img src="images/picpro.png" alt=""
               /></a>
-              <h3>Przykładowy projekt</h3>
+              <h3>Przykładowy projekt romantyczny</h3>
               <p>Przykładowy opis projektu.</p>
               <ul class="actions">
-                <li><a href="#" class="button">Sprawdź</a></li>
+                <li><a href="#" class="button">Sprawdź szczegóły</a></li>
               </ul>
             </article>
           </div>
@@ -151,10 +150,10 @@
               <a class="image fit" href="#"
                 ><img src="images/picpro.png" alt=""
               /></a>
-              <h3>Przykładowy projekt</h3>
+              <h3>Przykładowy projekt BOHO</h3>
               <p>Przykładowy opis projektu.</p>
               <ul class="actions">
-                <li><a href="#" class="button">Sprawdź</a></li>
+                <li><a href="#" class="button">Sprawdź szczegóły</a></li>
               </ul>
             </article>
             <article>
@@ -172,7 +171,7 @@
       </div>
     </section>
 
-    <!-- Two -->
+    <!-- Two 
     <section id="two">
       <div class="wrapper style1">
         <div class="carousel">
@@ -199,7 +198,7 @@
         </div>
       </div>
     </section>
-
+-->
     <!-- Three -->
     <section id="three">
       <div class="wrapper style2 special">
