--- a/okazja.html
+++ b/okazja.html
@@ -21,12 +21,12 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li class="current"><a href="generic.html">Czym się zajmujemy</a></li>
+          <li><a href="generic.html">Czym się zajmujemy</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li>
+          <li class="current">
             <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
-              <li><a href="#">Okazjonalnie</a></li>
+              <li style="font-weight: 800"><a href="#">Okazjonalnie</a></li>
               <li><a href="#">Romantycznie</a></li>
               <li><a href="#">Boho</a></li>
             </ul>
@@ -39,7 +39,9 @@
     <div id="main">
       <div class="wrapper">
         <div class="inner">
-          <span class="image fit"><img src="images/pic11.jpg" alt="" /></span>
+          <span class="image fit"
+            ><img src="images/chrzestex.png" alt=""
+          /></span>
           <header>
             <h2>Opis klasycznej podstrony</h2>
           </header>
