--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
             <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
               <li><a href="okazja.html">Okazjonalnie</a></li>
-              <li><a href="#">Romantycznie</a></li>
-              <li><a href="#">Boho</a></li>
+              <li><a href="romantycznie.html">Romantycznie</a></li>
+              <li><a href="boho.html">Boho</a></li>
             </ul>
           </li>
         </ul>
