--- a/generic.html
+++ b/generic.html
@@ -26,9 +26,9 @@
           <li>
             <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
-              <li><a href="#">Okazjonalnie</a></li>
-              <li><a href="#">Romantycznie</a></li>
-              <li><a href="#">Boho</a></li>
+              <li><a href="okazja.html">Okazjonalnie</a></li>
+              <li><a href="romantycznie.html">Romantycznie</a></li>
+              <li><a href="boho.html">Boho</a></li>
             </ul>
           </li>
         </ul>
