--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <li>
             <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
-              <li><a href="#">Okazjonalnie</a></li>
-              <li><a href="#">Romantycznie</a></li>
-              <li><a href="#">Boho</a></li>
+              <li><a href="okazja.html">Okazjonalnie</a></li>
+              <li><a href="romantycznie.html">Romantycznie</a></li>
+              <li><a href="boho.html">Boho</a></li>
             </ul>
           </li>
         </ul>
@@ -122,11 +122,19 @@
               /></a>
               <h3>Przykładowy projekt okazjonalny</h3>
               <p>
-                Projekt obejmuje organizację i dekorację uroczystości chrztu
-                świętego. W skład realizacji wchodzi personalizowana papeteria,
-                dekoracje stołu oraz upominki dla gości. Całość utrzymana w
-                eleganckim i delikatnym stylu, dostosowanym do indywidualnych
-                preferencji rodziny.
+                Styl okazjonalny to połączenie elegancji, indywidualnego
+                podejścia i dopracowanych detali, które podkreślają wyjątkowy
+                charakter uroczystości. Projekty tego typu dostosowane są do
+                konkretnych wydarzeń, takich jak śluby, chrzciny, rocznice czy
+                inne ważne momenty w życiu. Dekoracje w stylu okazjonalnym
+                często bazują na klasycznych i subtelnych elementach, takich jak
+                świeże kwiaty, świece, delikatne tkaniny i personalizowane
+                dodatki. Kolorystyka zależy od charakteru wydarzenia od
+                pastelowych tonów na chrzest, przez złote i białe akcenty na
+                ślub, po bogate barwy na eleganckie jubileusze. Styl okazjonalny
+                sprawdzi się w aranżacji wnętrz, organizacji przyjęć i
+                dekoracjach eventowych, nadając każdemu wydarzeniu wyjątkowy i
+                niezapomniany charakter. ✨🎀
               </p>
               <ul class="actions">
                 <li>
@@ -135,25 +143,59 @@
               </ul>
             </article>
             <article>
-              <a class="image fit" href="#"
-                ><img src="images/picpro.png" alt=""
+              <a class="image fit" href="romantycznie.html"
+                ><img src="images/picpro2.png" alt=""
               /></a>
               <h3>Przykładowy projekt romantyczny</h3>
-              <p>Przykładowy opis projektu.</p>
+              <p>
+                Styl romantyczny to esencja delikatności, subtelności i
+                elegancji. Charakteryzuje się miękkimi tkaninami, pastelową
+                kolorystyką oraz bogactwem kwiatowych motywów. W projektach
+                romantycznych często pojawiają się elementy vintage, koronkowe
+                detale, świeczniki, kryształowe dekoracje oraz subtelne światło,
+                które tworzy ciepłą i przytulną atmosferę. Materiały
+                wykorzystywane w romantycznym stylu to przede wszystkim aksamit,
+                jedwab, koronka i zwiewne tkaniny, które nadają lekkości i
+                finezji. Wnętrza i aranżacje w tej estetyce są pełne harmonii i
+                delikatnego uroku, sprzyjając atmosferze miłości i spokoju. Styl
+                romantyczny idealnie sprawdzi się w projektowaniu wnętrz, mody
+                oraz dekoracji na specjalne okazje, takie jak śluby czy kolacje
+                przy świecach. ✨💖
+              </p>
               <ul class="actions">
-                <li><a href="#" class="button">Sprawdź szczegóły</a></li>
+                <li>
+                  <a href="romantycznie.html" class="button"
+                    >Sprawdź szczegóły</a
+                  >
+                </li>
               </ul>
             </article>
           </div>
           <div>
             <article>
-              <a class="image fit" href="#"
-                ><img src="images/picpro.png" alt=""
+              <a class="image fit" href="boho.html"
+                ><img src="images/picpro3.png" alt=""
               /></a>
               <h3>Przykładowy projekt BOHO</h3>
-              <p>Przykładowy opis projektu.</p>
+              <p>
+                Styl BOHO to artystyczna mieszanka swobody, natury i eklektyzmu.
+                Charakteryzuje się luźnym, nieformalnym podejściem do designu,
+                często łączącym elementy etniczne, vintage i rustykalne. W
+                projektach boho dominują naturalne materiały, takie jak drewno,
+                len, rattan czy bawełna, a także bogate wzory, frędzle, makramy
+                i ręcznie robione dodatki. Kolorystyka stylu boho to zazwyczaj
+                ciepłe, ziemiste tony, uzupełnione żywymi akcentami np. głębokim
+                turkusem, musztardową żółcią czy ceglaną czerwienią. Całość
+                tworzy harmonijną i przytulną atmosferę, zachęcającą do relaksu
+                i wyrażania własnej kreatywności. Styl ten sprawdza się zarówno
+                we wnętrzach, jak i w modzie oraz projektowaniu biżuterii czy
+                dekoracji. Jest idealny dla osób, które cenią swobodę,
+                indywidualizm i bliskość natury. 🌿✨
+              </p>
               <ul class="actions">
-                <li><a href="#" class="button">Sprawdź szczegóły</a></li>
+                <li>
+                  <a href="boho.html" class="button">Sprawdź szczegóły</a>
+                </li>
               </ul>
             </article>
             <article>
