--- a/okazja.html
+++ b/okazja.html
@@ -11,6 +11,24 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <style>
+      /* Center the video */
+      .video-container {
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        height: 100vh; /* Full screen height */
+        background-color: #f0f0f0; /* Optional background color */
+      }
+
+      /* Set video size */
+      video {
+        max-width: 80%; /* 80% of screen width */
+        max-height: 70vh; /* 70% of screen height */
+        border-radius: 10px; /* Optional: rounded corners */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Optional: shadow */
+      }
+    </style>
   </head>
   <style></style>
   <body class="is-preload">
@@ -26,9 +44,11 @@
           <li class="current">
             <a href="#" class="dropdown">Przykładowe projekty</a>
             <ul>
-              <li style="font-weight: 800"><a href="#">Okazjonalnie</a></li>
-              <li><a href="#">Romantycznie</a></li>
-              <li><a href="#">Boho</a></li>
+              <li style="font-weight: 800">
+                <a href="okazja.html">Okazjonalnie</a>
+              </li>
+              <li><a href="romantycznie.html">Romantycznie</a></li>
+              <li><a href="boho.html">Boho</a></li>
             </ul>
           </li>
         </ul>
@@ -39,69 +59,30 @@
     <div id="main">
       <div class="wrapper">
         <div class="inner">
-          <span class="image fit"
-            ><img src="images/chrzestex.png" alt=""
-          /></span>
           <header>
-            <h2>Opis klasycznej podstrony</h2>
+            <h2>Stół na chrzest</h2>
           </header>
           <p>
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie. Przykładowy opis klasycznej podstrony, o Twojej
-            firmie. Przykładowy opis klasycznej podstrony, o Twojej firmie.
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie. Przykładowy opis klasycznej podstrony, o Twojej
-            firmie. Przykładowy opis klasycznej podstrony, o Twojej firmie.
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie.
+            Stół na chrzest będzie elegancki i subtelny, utrzymany w jasnej,
+            klasycznej kolorystyce. Cała aranżacja zostanie starannie
+            przygotowana, aby podkreślić wyjątkowy charakter tej uroczystości.
+            Na stole znajdą się delikatne dekoracje, stylowa zastawa oraz
+            ozdobne elementy nawiązujące do symboliki chrztu. Wszystko zostanie
+            harmonijnie dopasowane, tworząc przyjemną i uroczystą atmosferę dla
+            gości. Twojej firmie.
           </p>
-          <p>
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie. Przykładowy opis klasycznej podstrony, o Twojej
-            firmie. Przykładowy opis klasycznej podstrony, o Twojej firmie.
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie. Przykładowy opis klasycznej podstrony, o Twojej
-            firmie. Przykładowy opis klasycznej podstrony, o Twojej firmie.
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie.
-          </p>
-          <p>
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie. Przykładowy opis klasycznej podstrony, o Twojej
-            firmie. Przykładowy opis klasycznej podstrony, o Twojej firmie.
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie. Przykładowy opis klasycznej podstrony, o Twojej
-            firmie. Przykładowy opis klasycznej podstrony, o Twojej firmie.
-            Przykładowy opis klasycznej podstrony, o Twojej firmie. Przykładowy
-            opis klasycznej podstrony, o Twojej firmie. Przykładowy opis
-            klasycznej podstrony, o Twojej firmie. Przykładowy opis klasycznej
-            podstrony, o Twojej firmie. Przykładowy opis klasycznej podstrony, o
-            Twojej firmie.
-          </p>
+          <span class="image fit"
+            ><img src="images/chrzestex1.png" alt=""
+          /></span>
+          <span class="image fit"
+            ><img src="images/chrzestex2.png" alt=""
+          /></span>
+
+          <div class="video-container">
+            <video autoplay controls loop>
+              <source src="vid making/chrzest.mp4" type="video/mp4" />
+            </video>
+          </div>
         </div>
       </div>
     </div>
