--- a/about.html
+++ b/about.html
@@ -11,24 +11,6 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <style>
-      /* Center the video */
-      .video-container {
-        display: flex;
-        justify-content: center; /* Center horizontally */
-        align-items: center; /* Center vertically */
-        height: 100vh; /* Full screen height */
-        background-color: #f0f0f0; /* Optional background color */
-      }
-
-      /* Set video size */
-      video {
-        max-width: 80%; /* 80% of screen width */
-        max-height: 70vh; /* 70% of screen height */
-        border-radius: 10px; /* Optional: rounded corners */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Optional: shadow */
-      }
-    </style>
   </head>
   <style></style>
   <body class="is-preload">
@@ -39,18 +21,10 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li><a href="generic.html">Czym się zajmujemy</a></li>
+          <li class="current"><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="assort.html">Asortyment</a></li>
+          <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li class="current">
-            <a href="#" class="dropdown">Przykładowe projekty</a>
-            <ul>
-              <li style="font-weight: 800">
-                <a href="okazja.html">Okazjonalnie</a>
-              </li>
-              <li><a href="romantycznie.html">Romantycznie</a></li>
-              <li><a href="boho.html">Boho</a></li>
-            </ul>
-          </li>
         </ul>
       </nav>
     </header>
@@ -59,30 +33,19 @@
     <div id="main">
       <div class="wrapper">
         <div class="inner">
+          <span class="image fit"
+            ><img src="images/chrzestex.png" alt=""
+          /></span>
           <header>
-            <h2>Stół na chrzest</h2>
+            <h2>O firmie Renart</h2>
           </header>
           <p>
-            Stół na chrzest będzie elegancki i subtelny, utrzymany w jasnej,
-            klasycznej kolorystyce. Cała aranżacja zostanie starannie
-            przygotowana, aby podkreślić wyjątkowy charakter tej uroczystości.
-            Na stole znajdą się delikatne dekoracje, stylowa zastawa oraz
-            ozdobne elementy nawiązujące do symboliki chrztu. Wszystko zostanie
-            harmonijnie dopasowane, tworząc przyjemną i uroczystą atmosferę dla
-            gości. Twojej firmie.
+            Renart to firma specjalizująca się w wynajmie stołów, zastawy oraz
+            aranżacji stołów na różne okazje. Oferujemy eleganckie i dopasowane
+            do stylu wydarzenia rozwiązania, zapewniając wyjątkową oprawę każdej
+            uroczystości. Skontaktuj się ze mną, aby stworzyć idealne nakrycie
+            stołu dla Twojego wydarzenia!
           </p>
-          <span class="image fit"
-            ><img src="images/chrzestex1.png" alt=""
-          /></span>
-          <span class="image fit"
-            ><img src="images/chrzestex2.png" alt=""
-          /></span>
-
-          <div class="video-container">
-            <video autoplay controls loop>
-              <source src="vid making/chrzest.mp4" type="video/mp4" />
-            </video>
-          </div>
         </div>
       </div>
     </div>
@@ -91,8 +54,8 @@
     <section id="three">
       <div class="wrapper style2 special">
         <div class="inner">
-          <h2 class="alt">Skontaktuj się z nami.</h2>
-          <p>Szybko odpowiadamy skontaktuj się z nami i przekonaj się.</p>
+          <h2 class="alt">Skontaktuj się ze mną.</h2>
+          <p>Skontaktuj się ze mną i przekonaj się.</p>
           <a href="contact.html" class="button">Kontakt</a>
         </div>
       </div>
@@ -103,25 +66,11 @@
       <div class="wrapper style3">
         <div class="inner">
           <div>
-            <header>
-              <h3>Nasza dokumentacja</h3>
-            </header>
-            <p>
-              Nasza dokumentacja jest kompleksowym zestawem informacji, który ma
-              na celu wspierać użytkowników w pełnym zrozumieniu i efektywnym
-              korzystaniu z naszego produktu lub usługi. Zawiera ona szczegółowe
-              opisy funkcji, instrukcje obsługi, najlepsze praktyki, a także
-              odpowiedzi na najczęściej zadawane pytania (FAQ).
-            </p>
-            <ul class="actions">
-              <li>
-                <a href="#" class="button">Najczęściej zadawane pytania</a>
-              </li>
-            </ul>
+            <ul class="actions"></ul>
           </div>
           <div>
             <header>
-              <h3>Skontaktuj się z nami!</h3>
+              <h3>Skontaktuj się ze mną!</h3>
             </header>
             <div class="contact-icons">
               <ul>
