--- a/assort.html
+++ b/assort.html
@@ -39,16 +39,10 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li><a href="generic.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li class="current"><a href="assort.html">Asortyment</a></li>
+          <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li class="current">
-            <a href="#" class="dropdown">Przykładowe projekty</a>
-            <ul>
-              <li><a href="okazja">Okazjonalnie</a></li>
-              <li><a href="romantycznie.html">Romantycznie</a></li>
-              <li style="font-weight: 800"><a href="boho.html">Boho</a></li>
-            </ul>
-          </li>
         </ul>
       </nav>
     </header>
@@ -58,29 +52,10 @@
       <div class="wrapper">
         <div class="inner">
           <header>
-            <h2>Stół na chrzest w stylu BOHO</h2>
+            <h2>Nasz asortyment</h2>
           </header>
-          <p>
-            Stół na chrzest w stylu boho będzie pełen naturalnego uroku i
-            lekkości. Dominować będą jasne, ziemiste barwy, przełamane
-            subtelnymi pastelami oraz akcentami w odcieniach beżu, kremu i
-            złota. Cała aranżacja zostanie starannie przygotowana, aby stworzyć
-            ciepłą, przytulną atmosferę nawiązującą do bliskości natury. Na
-            stole znajdą się naturalne dekoracje, takie jak lniane serwetki,
-            drewniane akcenty, makramowe bieżniki oraz delikatne kompozycje z
-            suszonych kwiatów i traw pampasowych. Stylowa, ręcznie wykonana
-            ceramika i subtelne świece wprowadzą romantyczny, harmonijny
-            nastrój, podkreślając wyjątkowy charakter tej uroczystości. Całość
-            zostanie dopasowana tak, aby stworzyć niezapomnianą, magiczną oprawę
-            dla gości. 🌿✨
-          </p>
-          <span class="image fit"><img src="images/boho.png" alt="" /></span>
 
-          <div class="video-container">
-            <video autoplay controls loop>
-              <source src="vid making/boho.mp4" type="video/mp4" />
-            </video>
-          </div>
+          <span class="image fit"><img src="images/boho.png" alt="" /></span>
         </div>
       </div>
     </div>
@@ -89,8 +64,8 @@
     <section id="three">
       <div class="wrapper style2 special">
         <div class="inner">
-          <h2 class="alt">Skontaktuj się z nami.</h2>
-          <p>Szybko odpowiadamy skontaktuj się z nami i przekonaj się.</p>
+          <h2 class="alt">Skontaktuj się ze mną.</h2>
+          <p>Skontaktuj się ze mną i przekonaj się.</p>
           <a href="contact.html" class="button">Kontakt</a>
         </div>
       </div>
@@ -101,25 +76,11 @@
       <div class="wrapper style3">
         <div class="inner">
           <div>
-            <header>
-              <h3>Nasza dokumentacja</h3>
-            </header>
-            <p>
-              Nasza dokumentacja jest kompleksowym zestawem informacji, który ma
-              na celu wspierać użytkowników w pełnym zrozumieniu i efektywnym
-              korzystaniu z naszego produktu lub usługi. Zawiera ona szczegółowe
-              opisy funkcji, instrukcje obsługi, najlepsze praktyki, a także
-              odpowiedzi na najczęściej zadawane pytania (FAQ).
-            </p>
-            <ul class="actions">
-              <li>
-                <a href="#" class="button">Najczęściej zadawane pytania</a>
-              </li>
-            </ul>
+            <ul class="actions"></ul>
           </div>
           <div>
             <header>
-              <h3>Skontaktuj się z nami!</h3>
+              <h3>Skontaktuj się ze mną!</h3>
             </header>
             <div class="contact-icons">
               <ul>
