--- a/elements.html
+++ b/elements.html
@@ -19,18 +19,12 @@
       <!-- Nav -->
       <nav id="nav">
         <ul>
-          <li class="current"><a href="index.html">Strona główna</a></li>
+          <li><a href="index.html">Strona główna</a></li>
 
-          <li><a href="generic.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="assort.html">Asortyment</a></li>
+          <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li>
-            <a href="#" class="dropdown">Przykładowe projekty</a>
-            <ul>
-              <li><a href="#">Okazjonalnie</a></li>
-              <li><a href="#">Romantycznie</a></li>
-              <li><a href="#">Boho</a></li>
-            </ul>
-          </li>
         </ul>
       </nav>
     </header>
@@ -654,25 +648,11 @@ print 'It took ' + i + ' iterations to sort the deck.';
       <div class="wrapper style3">
         <div class="inner">
           <div>
-            <header>
-              <h3>Nasza dokumentacja</h3>
-            </header>
-            <p>
-              Nasza dokumentacja jest kompleksowym zestawem informacji, który ma
-              na celu wspierać użytkowników w pełnym zrozumieniu i efektywnym
-              korzystaniu z naszego produktu lub usługi. Zawiera ona szczegółowe
-              opisy funkcji, instrukcje obsługi, najlepsze praktyki, a także
-              odpowiedzi na najczęściej zadawane pytania (FAQ).
-            </p>
-            <ul class="actions">
-              <li>
-                <a href="#" class="button">Najczęściej zadawane pytania</a>
-              </li>
-            </ul>
+            <ul class="actions"></ul>
           </div>
           <div>
             <header>
-              <h3>Skontaktuj się z nami!</h3>
+              <h3>Skontaktuj się ze mną!</h3>
             </header>
             <div class="contact-icons">
               <ul>
