--- a/gallery.html
+++ b/gallery.html
@@ -39,18 +39,10 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li><a href="generic.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="assort.html">Asortyment</a></li>
+          <li class="current"><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li class="current">
-            <a href="#" class="dropdown">Przykładowe projekty</a>
-            <ul>
-              <li><a href="okazja.html">Okazjonalnie</a></li>
-              <li style="font-weight: 800">
-                <a href="romantycznie.html">Romantycznie</a>
-              </li>
-              <li><a href="boho.html">Boho</a></li>
-            </ul>
-          </li>
         </ul>
       </nav>
     </header>
@@ -60,25 +52,15 @@
       <div class="wrapper">
         <div class="inner">
           <header>
-            <h2>Stół na romantyczną okazję</h2>
+            <h2>Galeria zdjęć</h2>
           </header>
-          <p>
-            Stół na romantyczną okazję będzie pełen elegancji i nastrojowego
-            uroku. Aranżacja zostanie starannie przygotowana, aby stworzyć
-            ciepłą i intymną atmosferę. Na stole pojawią się subtelne dekoracje,
-            delikatne tkaniny oraz blask świec, które podkreślą wyjątkowy
-            charakter chwili. Całość dopełnią starannie dobrane detale, tworząc
-            magiczne tło dla niezapomnianych wspomnień.
-          </p>
-          <span class="image fit"
-            ><img src="images/romantycznie1.png" alt=""
-          /></span>
 
-          <div class="video-container">
-            <video autoplay controls loop>
-              <source src="vid making/vidchrzest.mp4" type="video/mp4" />
-            </video>
-          </div>
+          <span class="image fit"
+            ><img src="images/chrzestex1.png" alt=""
+          /></span>
+          <span class="image fit"
+            ><img src="images/chrzestex2.png" alt=""
+          /></span>
         </div>
       </div>
     </div>
@@ -87,8 +69,8 @@
     <section id="three">
       <div class="wrapper style2 special">
         <div class="inner">
-          <h2 class="alt">Skontaktuj się z nami.</h2>
-          <p>Szybko odpowiadamy skontaktuj się z nami i przekonaj się.</p>
+          <h2 class="alt">Skontaktuj się ze mną.</h2>
+          <p>Skontaktuj się ze mną i przekonaj się.</p>
           <a href="contact.html" class="button">Kontakt</a>
         </div>
       </div>
@@ -99,25 +81,11 @@
       <div class="wrapper style3">
         <div class="inner">
           <div>
-            <header>
-              <h3>Nasza dokumentacja</h3>
-            </header>
-            <p>
-              Nasza dokumentacja jest kompleksowym zestawem informacji, który ma
-              na celu wspierać użytkowników w pełnym zrozumieniu i efektywnym
-              korzystaniu z naszego produktu lub usługi. Zawiera ona szczegółowe
-              opisy funkcji, instrukcje obsługi, najlepsze praktyki, a także
-              odpowiedzi na najczęściej zadawane pytania (FAQ).
-            </p>
-            <ul class="actions">
-              <li>
-                <a href="#" class="button">Najczęściej zadawane pytania</a>
-              </li>
-            </ul>
+            <ul class="actions"></ul>
           </div>
           <div>
             <header>
-              <h3>Skontaktuj się z nami!</h3>
+              <h3>Skontaktuj się ze mną!</h3>
             </header>
             <div class="contact-icons">
               <ul>
