--- a/index.html
+++ b/index.html
@@ -21,20 +21,12 @@
         <ul>
           <li class="current"><a href="index.html">Strona główna</a></li>
 
-          <li><a href="generic.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="assort.html">Asortyment</a></li>
+          <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li>
-            <a href="#" class="dropdown">Przykładowe projekty</a>
-            <ul>
-              <li><a href="okazja.html">Okazjonalnie</a></li>
-              <li><a href="romantycznie.html">Romantycznie</a></li>
-              <li><a href="boho.html">Boho</a></li>
-            </ul>
-          </li>
         </ul>
       </nav>
-
-      <!-- Logo -->
     </header>
     <!-- Banner -->
     <section id="banner">
@@ -44,7 +36,7 @@
         </div>
         <div class="content">
           <h2 class="alt">
-            <a href="#">Nasza firma jest najlepsza w okolicy</a>
+            <a href="#">Czemu właśnie moje usługi?</a>
           </h2>
           <h2 class="alt">Przekonaj się!</h2>
           <ul class="actions">
@@ -58,10 +50,12 @@
         </div>
         <div class="content">
           <h2 class="alt">
-            <a href="#">Nasz asortyment</a>
+            <a href="assort.html">Nasz asortyment</a>
           </h2>
           <ul class="actions">
-            <li><a href="#one" class="button">Sprawdź nasz asortyment!</a></li>
+            <li>
+              <a href="assort.html" class="button">Sprawdź nasz asortyment!</a>
+            </li>
           </ul>
         </div>
       </article>
@@ -71,10 +65,10 @@
         </div>
         <div class="content">
           <h2 class="alt">
-            <a href="#">Sprawdź dostępność</a>
+            <a href="gallery.html">Galeria zdjęć</a>
           </h2>
           <ul class="actions">
-            <li><a href="#" class="button">Sprawdź dostępność wynajmu!</a></li>
+            <li><a href="gallery.html" class="button">Zobacz galerię!</a></li>
           </ul>
         </div>
       </article>
@@ -115,7 +109,7 @@
               </ul>
             </article>
           </div>
-          <div>
+          <!-- <div>
             <article>
               <a class="image fit" href="okazja.html"
                 ><img src="images/picpro1.png" alt=""
@@ -208,7 +202,7 @@
                 <li><a href="#" class="button">Sprawdź</a></li>
               </ul>
             </article>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -245,8 +239,8 @@
     <section id="three">
       <div class="wrapper style2 special">
         <div class="inner">
-          <h2 class="alt">Skontaktuj się z nami.</h2>
-          <p>Szybko odpowiadamy skontaktuj się z nami i przekonaj się.</p>
+          <h2 class="alt">Skontaktuj się ze mną.</h2>
+          <p>Skontaktuj się ze mną i przekonaj się.</p>
           <a href="contact.html" class="button">Kontakt</a>
         </div>
       </div>
@@ -257,25 +251,11 @@
       <div class="wrapper style3">
         <div class="inner">
           <div>
-            <header>
-              <h3>Nasza dokumentacja</h3>
-            </header>
-            <p>
-              Nasza dokumentacja jest kompleksowym zestawem informacji, który ma
-              na celu wspierać użytkowników w pełnym zrozumieniu i efektywnym
-              korzystaniu z naszego produktu lub usługi. Zawiera ona szczegółowe
-              opisy funkcji, instrukcje obsługi, najlepsze praktyki, a także
-              odpowiedzi na najczęściej zadawane pytania (FAQ).
-            </p>
-            <ul class="actions">
-              <li>
-                <a href="#" class="button">Najczęściej zadawane pytania</a>
-              </li>
-            </ul>
+            <ul class="actions"></ul>
           </div>
           <div>
             <header>
-              <h3>Skontaktuj się z nami!</h3>
+              <h3>Skontaktuj się ze mną!</h3>
             </header>
             <div class="contact-icons">
               <ul>
