--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,10 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li><a href="generic.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="assort.html">Asortyment</a></li>
+          <li><a href="gallery.html">Galeria</a></li>
           <li class="current"><a href="contact.html">Kontakt</a></li>
-          <li>
-            <a href="#" class="dropdown">Przykładowe projekty</a>
-            <ul>
-              <li><a href="okazja.html">Okazjonalnie</a></li>
-              <li><a href="romantycznie.html">Romantycznie</a></li>
-              <li><a href="boho.html">Boho</a></li>
-            </ul>
-          </li>
         </ul>
       </nav>
     </header>
